--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Bot for discord",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "deploy": "nodemon deploy-commands.js",
+    "start": "nodemon index.js",
+    "dev": "start npm run deploy && start npm run start"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,14 @@
   "bugs": {
     "url": "https://github.com/tu11aa/discord-bot/issues"
   },
-  "homepage": "https://github.com/tu11aa/discord-bot#readme"
+  "homepage": "https://github.com/tu11aa/discord-bot#readme",
+  "dependencies": {
+    "cron": "^2.1.0",
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
+    "ytdl-core": "^4.11.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
